--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,14 +54,15 @@ span {
 
 .header {
     background-color: #bda491a4;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'), url('../images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, left 20px;
 
 }
 
 .banner {
-    padding: 30px 30px 0px 150px;
+
+    padding: 220px 30px 0px 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
